api clientler bölündü