@@ -15,366 +15,9 @@ import java.time.format.DateTimeFormatter;
 public class ApiClientFX {
     private static final String BASE_URL = "http://localhost:8080/v1/api";
 
-    public static LoginResponse signup(String name, String surname, String telephone, String password, String email) throws IOException {
-        URL url = new URL(BASE_URL + "/auth/superadmin-signup");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setDoOutput(true);
-
-        // Sınır kontrollü değerler
-        String ip = getPublicIpAddress();
-        if (ip.length() > 50) ip = ip.substring(0, 50);
-
-        String deviceInfo = getDeviceInfo();
-        if (deviceInfo.length() > 50) deviceInfo = deviceInfo.substring(0, 50);
-
-        String appVersion = "1.0";
-        if (appVersion.length() > 20) appVersion = appVersion.substring(0, 20);
-
-        String platform = "DESKTOP";
-        if (platform.length() > 20) platform = platform.substring(0, 20);
-
-        String jsonInput = String.format(
-                "{\"name\":\"%s\",\"surname\":\"%s\",\"telephone\":\"%s\",\"password\":\"%s\",\"email\":\"%s\",\"ipAddress\":\"%s\",\"deviceInfo\":\"%s\",\"appVersion\":\"%s\",\"platform\":\"%s\"}",
-                name, surname, telephone, password, email, ip, deviceInfo, appVersion, platform
-        );
-
-        try (OutputStream os = conn.getOutputStream()) {
-            byte[] input = jsonInput.getBytes("utf-8");
-            os.write(input, 0, input.length);
-        }
-
-        int code = conn.getResponseCode();
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(
-                        code == 200 || code == 201 ? conn.getInputStream() : conn.getErrorStream(),
-                        "utf-8"))) {
-
-            StringBuilder response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-
-            String resp = response.toString();
-            System.out.println("Signup Response: " + resp);
-
-            if (code == 200 || code == 201) {
-                try {
-                    boolean success = resp.contains("\"success\":true");
-                    String message = resp.split("\"message\":\"")[1].split("\"")[0];
-                    return new LoginResponse(success, message);
-                } catch (Exception e) {
-                    throw new IOException("Invalid response format: " + resp);
-                }
-            } else {
-                String errorMsg = extractJsonMessage(resp);
-                throw new IOException(errorMsg != null ? errorMsg : "Signup failed: " + code + " - " + resp);
-            }
-        }
-    }
-
-    public static LoginResponse login(String telephone, String password) throws IOException {
-        URL url = new URL(BASE_URL + "/auth/superadmin-login");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setDoOutput(true);
-
-        // Sınır kontrollü değerler
-        String ip = getPublicIpAddress();
-        if (ip.length() > 50) ip = ip.substring(0, 50);
-        
-        String deviceInfo = getDeviceInfo();
-        if (deviceInfo.length() > 50) deviceInfo = deviceInfo.substring(0, 50);
-        
-        String jsonInput = String.format(
-                "{\"telephone\":\"%s\",\"password\":\"%s\",\"ipAddress\":\"%s\",\"deviceInfo\":\"%s\",\"appVersion\":\"1.0\",\"platform\":\"DESKTOP\"}",
-                telephone, password, ip, deviceInfo
-        );
-
-        try (OutputStream os = conn.getOutputStream()) {
-            byte[] input = jsonInput.getBytes("utf-8");
-            os.write(input, 0, input.length);
-        }
-
-        int code = conn.getResponseCode();
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(
-                        code == 200 ? conn.getInputStream() : conn.getErrorStream(),
-                        "utf-8"))) {
-
-            StringBuilder response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-
-            String resp = response.toString();
-            System.out.println("Login Response: " + resp);
-
-            if (code == 200) {
-                try {
-                    boolean success = resp.contains("\"success\":true");
-                    String message = resp.split("\"message\":\"")[1].split("\"")[0];
-                    return new LoginResponse(success, message);
-                } catch (Exception e) {
-                    throw new IOException("Invalid response format: " + resp);
-                }
-            } else {
-                throw new IOException("Login failed: " + code + " - " + resp);
-            }
-        }
-    }
-
-    public static TokenResponse phoneVerify(String telephone, String verificationCode) throws IOException {
-        URL url = new URL(BASE_URL + "/auth/phone-verify");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setDoOutput(true);
-    
-        // Sınır kontrollü değerler
-        String ip = getPublicIpAddress();
-        if (ip.length() > 50) ip = ip.substring(0, 50);
-    
-        String deviceInfo = getDeviceInfo();
-        if (deviceInfo.length() > 50) deviceInfo = deviceInfo.substring(0, 50);
-    
-        String appVersion = "1.0";
-        if (appVersion.length() > 20) appVersion = appVersion.substring(0, 20);
-    
-        String platform = "DESKTOP";
-        if (platform.length() > 20) platform = platform.substring(0, 20);
-    
-        String jsonInput = String.format(
-                "{\"telephone\":\"%s\",\"code\":\"%s\",\"ipAddress\":\"%s\",\"deviceInfo\":\"%s\",\"appVersion\":\"%s\",\"platform\":\"%s\"}",
-                telephone, verificationCode, ip, deviceInfo, appVersion, platform
-        );
-    
-        try (OutputStream os = conn.getOutputStream()) {
-            byte[] input = jsonInput.getBytes("utf-8");
-            os.write(input, 0, input.length);
-        }
-    
-        int code = conn.getResponseCode();
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(
-                        code == 200 ? conn.getInputStream() : conn.getErrorStream(),
-                        "utf-8"))) {
-    
-            StringBuilder response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-    
-            String resp = response.toString();
-            System.out.println("Phone Verify Response: " + resp);
-    
-            if (code == 200) {
-                try {
-                    // Access Token
-                    String accessToken = extractNestedValue(resp, "accessToken", "token");
-                    String refreshToken = extractNestedValue(resp, "refreshToken", "token");
-                    if (accessToken == null || refreshToken == null) {
-                        // Backend'den gelen hata mesajını çek
-                        String errorMsg = extractJsonMessage(resp);
-                        throw new IOException(errorMsg != null ? errorMsg : "Doğrulama başarısız. Lütfen kodu ve telefon numarasını kontrol edin.");
-                    }
-                    LocalDateTime accessIssuedAt = parseDateTime(extractNestedValue(resp, "accessToken", "issuedAt"));
-                    LocalDateTime accessExpiresAt = parseDateTime(extractNestedValue(resp, "accessToken", "expiresAt"));
-                    String accessIpAddress = extractNestedValue(resp, "accessToken", "ipAddress");
-                    String accessDeviceInfo = extractNestedValue(resp, "accessToken", "deviceInfo");
-    
-                    LocalDateTime refreshIssuedAt = parseDateTime(extractNestedValue(resp, "refreshToken", "issuedAt"));
-                    LocalDateTime refreshExpiresAt = parseDateTime(extractNestedValue(resp, "refreshToken", "expiresAt"));
-                    String refreshIpAddress = extractNestedValue(resp, "refreshToken", "ipAddress");
-                    String refreshDeviceInfo = extractNestedValue(resp, "refreshToken", "deviceInfo");
-    
-                    TokenDTO accessTokenDTO = new TokenDTO(
-                            accessToken,
-                            accessIssuedAt,
-                            accessExpiresAt,
-                            accessIssuedAt,
-                            accessIpAddress,
-                            accessDeviceInfo,
-                            TokenType.ACCESS
-                    );
-    
-                    TokenDTO refreshTokenDTO = new TokenDTO(
-                            refreshToken,
-                            refreshIssuedAt,
-                            refreshExpiresAt,
-                            refreshIssuedAt,
-                            refreshIpAddress,
-                            refreshDeviceInfo,
-                            TokenType.REFRESH
-                    );
-                    
-                    // Token'ları güvenli bir şekilde sakla
-                    try {
-                        TokenSecureStorage.storeTokens(accessTokenDTO, refreshTokenDTO);
-                        System.out.println("Token'lar güvenli bir şekilde saklandı.");
-                    } catch (Exception e) {
-                        System.err.println("Token'lar saklanırken bir hata oluştu: " + e.getMessage());
-                        e.printStackTrace();
-                        // Hata durumunda bile işleme devam et, kritik bir hata değil
-                    }
-    
-                    return new TokenResponse(accessTokenDTO, refreshTokenDTO);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                    String errorMsg = extractJsonMessage(resp);
-                    throw new IOException(errorMsg != null ? errorMsg : "Invalid response format: " + resp);
-                }
-            } else {
-                // Backend'den gelen hata mesajını çek
-                String errorMsg = extractJsonMessage(resp);
-                throw new IOException(errorMsg != null ? errorMsg : "Phone verification failed: " + code + " - " + resp);
-            }
-        }
-    }
-    
-    public static TokenDTO refreshToken(String refreshToken) throws IOException {
-        URL url = new URL(BASE_URL + "/auth/refresh");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setDoOutput(true);
-
-        String jsonInput = String.format(
-                "{\"refreshToken\":\"%s\"}",
-                refreshToken
-        );
-
-        try (OutputStream os = conn.getOutputStream()) {
-            byte[] input = jsonInput.getBytes("utf-8");
-            os.write(input, 0, input.length);
-        }
-
-        int code = conn.getResponseCode();
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(
-                        code == 200 ? conn.getInputStream() : conn.getErrorStream(),
-                        "utf-8"))) {
-
-            StringBuilder response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-
-            String resp = response.toString();
-            System.out.println("Refresh Token Response: " + resp);
-
-            if (code == 200) {
-                try {
-                    String token = resp.split("\"token\":\"")[1].split("\"")[0];
-                    LocalDateTime issuedAt = parseDateTime(resp.split("\"issuedAt\":\"")[1].split("\"")[0]);
-                    LocalDateTime expiresAt = parseDateTime(resp.split("\"expiresAt\":\"")[1].split("\"")[0]);
-                    LocalDateTime lastUsedAt = parseDateTime(resp.split("\"lastUsedAt\":\"")[1].split("\"")[0]);
-                    String ipAddress = resp.split("\"ipAddress\":\"")[1].split("\"")[0];
-                    String deviceInfo = resp.split("\"deviceInfo\":\"")[1].split("\"")[0];
-                    String tokenType = resp.split("\"tokenType\":\"")[1].split("\"")[0];
-                    
-                    return new TokenDTO(
-                            token, 
-                            issuedAt, 
-                            expiresAt, 
-                            lastUsedAt, 
-                            ipAddress, 
-                            deviceInfo, 
-                            TokenType.valueOf(tokenType)
-                    );
-                } catch (Exception e) {
-                    throw new IOException("Invalid response format: " + resp);
-                }
-            } else {
-                throw new IOException("Token refresh failed: " + code + " - " + resp);
-            }
-        }
-    }
-
-    public static String getPublicIpAddress() {
-        try {
-            URL whatismyip = new URL("https://api.ipify.org");
-            BufferedReader in = new BufferedReader(new InputStreamReader(whatismyip.openStream()));
-            return in.readLine();
-        } catch (Exception e) {
-            return "127.0.0.1";
-        }
-    }
-    
-    /**
-     * Cihaz bilgilerini otomatik olarak toplayan metot.
-     * İşletim sistemi, Java versiyonu ve ekran çözünürlüğü gibi bilgileri içerir.
-     */
-    public static String getDeviceInfo() {
-        StringBuilder deviceInfo = new StringBuilder();
-        
-        // İşletim sistemi bilgileri
-        deviceInfo.append("OS: ").append(System.getProperty("os.name"))
-                 .append(" ").append(System.getProperty("os.version"))
-                 .append(", Arch: ").append(System.getProperty("os.arch"));
-                 
-        // Java versiyonu
-        deviceInfo.append(", Java: ").append(System.getProperty("java.version"));
-        
-        // Kullanıcı bilgileri
-        deviceInfo.append(", User: ").append(System.getProperty("user.name"));
-        
-        // JVM bilgileri
-        deviceInfo.append(", JVM: ").append(System.getProperty("java.vm.name"));
-        
-        // Hostname
-        try {
-            deviceInfo.append(", Host: ").append(java.net.InetAddress.getLocalHost().getHostName());
-        } catch (Exception e) {
-            // Hostname alınamadıysa, devam et
-        }
-        
-        // Maksimum uzunluk kontrolü
-        String result = deviceInfo.toString();
-        return result.length() > 50 ? result.substring(0, 50) : result;
-    }
-    
-    private static String extractNestedValue(String json, String parentKey, String childKey) {
-        int parentStart = json.indexOf("\"" + parentKey + "\":{");
-        if (parentStart == -1) return null;
-        
-        int childStart = json.indexOf("\"" + childKey + "\":\"", parentStart);
-        if (childStart == -1) return null;
-        
-        childStart += childKey.length() + 4; // Skip over "key":"
-        int childEnd = json.indexOf("\"", childStart);
-        
-        return json.substring(childStart, childEnd);
-    }
-    
-    private static LocalDateTime parseDateTime(String dateTimeStr) {
-        if (dateTimeStr == null) return null;
-        // Gelen format: "2025-06-29T20:29:49.6046911"
-        DateTimeFormatter formatter = DateTimeFormatter.ISO_DATE_TIME;
-        try {
-            return LocalDateTime.parse(dateTimeStr, formatter);
-        } catch (Exception e) {
-            // Alternatif format deneyin
-            try {
-                formatter = DateTimeFormatter.ISO_DATE_TIME;
-                return LocalDateTime.parse(dateTimeStr, formatter);
-            } catch (Exception ex) {
-                try {
-                    formatter = DateTimeFormatter.ISO_DATE_TIME;
-                    return LocalDateTime.parse(dateTimeStr, formatter);
-                } catch (Exception ex2) {
-                    System.err.println("DateTime parse error: " + dateTimeStr);
-                    return LocalDateTime.now();
-                }
-            }
-        }
-    }
+    // =================================================================
+    // UTILITY METHODS
+    // =================================================================
     
     // Haber API Metotları
     
@@ -384,7 +27,14 @@ public class ApiClientFX {
             endpoint += "?platform=" + platform;
         }
         
-        URL url = new URL(endpoint);
+        // URL yapısını Java 20+ uyumlu şekilde oluştur
+        URL url;
+        try {
+            url = new URI(endpoint).toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException("Invalid URL: " + e.getMessage(), e);
+        }
+        
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setRequestProperty("Content-Type", "application/json");
@@ -424,7 +74,15 @@ public class ApiClientFX {
             boolean allowFeedback
     ) throws IOException {
         String boundary = "----WebKitFormBoundary" + System.currentTimeMillis();
-        URL url = new URL(BASE_URL + "/news/create");
+        
+        // URL yapısını Java 20+ uyumlu şekilde oluştur
+        URL url;
+        try {
+            url = new URI(BASE_URL + "/news/create").toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException("Invalid URL: " + e.getMessage(), e);
+        }
+        
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("POST");
         conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
@@ -506,7 +164,15 @@ public class ApiClientFX {
             Boolean active
     ) throws IOException {
         String boundary = "----WebKitFormBoundary" + System.currentTimeMillis();
-        URL url = new URL(BASE_URL + "/news/update");
+        
+        // URL yapısını Java 20+ uyumlu şekilde oluştur
+        URL url;
+        try {
+            url = new URI(BASE_URL + "/news/update").toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException("Invalid URL: " + e.getMessage(), e);
+        }
+        
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("PUT");
         conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
@@ -622,7 +288,14 @@ public class ApiClientFX {
     }
     
     public static String softDeleteNews(TokenDTO accessToken, Long id) throws IOException {
-        URL url = new URL(BASE_URL + "/news/" + id + "/soft-delete");
+        // URL yapısını Java 20+ uyumlu şekilde oluştur
+        URL url;
+        try {
+            url = new URI(BASE_URL + "/news/" + id + "/soft-delete").toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException("Invalid URL: " + e.getMessage(), e);
+        }
+        
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("PUT");
         conn.setRequestProperty("Content-Type", "application/json");
@@ -717,7 +390,7 @@ public class ApiClientFX {
                 
                 // Refresh token ile yenilemeyi dene
                 try {
-                    TokenDTO newAccessToken = refreshToken(tokenPair.getRefreshToken());
+                    TokenDTO newAccessToken = AuthApiClient.refreshToken(tokenPair.getRefreshToken());
                     
                     // Yeni tokenları sakla (refresh token değişmediği için eski refresh token'ı kullan)
                     LocalDateTime refreshExpiry = LocalDateTime.parse(tokenPair.getRefreshExpiry());
@@ -726,8 +399,8 @@ public class ApiClientFX {
                             now.minusHours(1), // Tam olmayan issuedAt
                             refreshExpiry,
                             now,
-                            getPublicIpAddress(),
-                            getDeviceInfo(),
+                            AuthApiClient.getPublicIpAddress(),
+                            AuthApiClient.getDeviceInfo(),
                             TokenType.REFRESH
                     );
                     
@@ -750,8 +423,8 @@ public class ApiClientFX {
                         now.minusMinutes(5), // Tam olmayan issuedAt
                         accessExpiry,
                         now,
-                        getPublicIpAddress(),
-                        getDeviceInfo(),
+                        AuthApiClient.getPublicIpAddress(),
+                        AuthApiClient.getDeviceInfo(),
                         TokenType.ACCESS
                 );
                 
@@ -760,8 +433,8 @@ public class ApiClientFX {
                         now.minusHours(1), // Tam olmayan issuedAt
                         refreshExpiry,
                         now,
-                        getPublicIpAddress(),
-                        getDeviceInfo(),
+                        AuthApiClient.getPublicIpAddress(),
+                        AuthApiClient.getDeviceInfo(),
                         TokenType.REFRESH
                 );
                 
@@ -1257,7 +930,14 @@ public class ApiClientFX {
             
             System.out.println("Identity requests API URL: " + urlBuilder.toString());
             
-            URL url = new URL(urlBuilder.toString());
+            // URL yapısını Java 20+ uyumlu şekilde oluştur
+            URL url;
+            try {
+                url = new URI(urlBuilder.toString()).toURL();
+            } catch (URISyntaxException e) {
+                throw new IOException("Invalid URL: " + e.getMessage(), e);
+            }
+            
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Authorization", "Bearer " + accessToken.getToken());
@@ -1318,7 +998,14 @@ public class ApiClientFX {
         InputStream inputStream = null;
         
         try {
-            URL url = new URL(BASE_URL + "/wallet/process");
+            // URL yapısını Java 20+ uyumlu şekilde oluştur
+            URL url;
+            try {
+                url = new URI(BASE_URL + "/wallet/process").toURL();
+            } catch (URISyntaxException e) {
+                throw new IOException("Invalid URL: " + e.getMessage(), e);
+            }
+            
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
             conn.setRequestProperty("Authorization", "Bearer " + accessToken.getToken());
@@ -1378,81 +1065,6 @@ public class ApiClientFX {
                     inputStream.close();
                 } catch (IOException e) {
                     System.err.println("InputStream kapatılırken hata: " + e.getMessage());
-                }
-            }
-        }
-    }
-    
-    /**
-     * Kaydedilmiş token'ları temizler
-     * Çıkış işlemlerinde kullanılır
-     */
-    public static void clearSavedTokens() {
-        try {
-            TokenSecureStorage.clearTokens();
-            System.out.println("Kaydedilmiş token'lar başarıyla temizlendi.");
-        } catch (Exception e) {
-            System.err.println("Token temizleme sırasında hata: " + e.getMessage());
-            throw e;
-        }
-    }
-
-    /**
-     * Yeniden doğrulama kodu gönderilmesi için API'ye istek yapar
-     */
-    public static String resendVerificationCode(String telephone) throws IOException {
-        // Telefon numarasını URL parametresi olarak ekle
-        String endpoint = BASE_URL + "/auth/resend-verify-code?telephone=" + telephone;
-        
-        // URL yapısını Java 20+ uyumlu şekilde oluştur
-        URL url;
-        try {
-            url = new URI(endpoint).toURL();
-        } catch (URISyntaxException e) {
-            throw new IOException("Invalid URL: " + e.getMessage(), e);
-        }
-        
-        System.out.println("Yeniden doğrulama kodu gönderme URL: " + url.toString());
-        
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST"); // POST metodu kullanıyoruz, URL parametresi ile birlikte
-        conn.setRequestProperty("Content-Type", "application/json");
-        
-        // GET isteği olduğu için body göndermeye gerek yok
-
-        int code = conn.getResponseCode();
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(
-                        code == 200 ? conn.getInputStream() : conn.getErrorStream(),
-                        "utf-8"))) {
-
-            StringBuilder response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-
-            String resp = response.toString();
-            System.out.println("Resend Verification Code Response: " + resp);
-
-            // Durum kodu ne olursa olsun, yanıttaki mesajı al
-            try {
-                // message alanını doğrudan extract et
-                String message = extractJsonMessage(resp);
-                
-                if (code == 200 && resp.contains("\"success\":true")) {
-                    // Başarılı olduğunda mesajı doğrudan dön
-                    return message != null ? message : "Doğrulama kodu gönderildi";
-                } else {
-                    // Başarısız olduğunda veya başka bir durum kodunda backend hatası ilet
-                    throw new IOException(message != null ? message : "Backend hatası: " + code + " - " + resp);
-                }
-            } catch (Exception e) {
-                if (e instanceof IOException) {
-                    throw (IOException) e;
-                } else {
-                    // Genel hata durumu
-                    throw new IOException("Backend yanıtı işlenirken hata: " + resp);
                 }
             }
         }
